--- a/app/src/main/res/layout-v23/recycle_viewer_item_sent_message.xml
+++ b/app/src/main/res/layout-v23/recycle_viewer_item_sent_message.xml
@@ -14,12 +14,13 @@
             android:id="@+id/sentTextViewMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="6dp"
+            android:layout_marginTop="4dp"
             android:background="@drawable/outgoing_chat_bubble"
-            android:padding="10dp"
+            android:ellipsize="middle"
+            android:padding="8dp"
             android:paddingEnd="15dp"
             android:text="TextView"
-            android:textColor="#0B0B0B"
+            android:textColor="#FFFFFF"
             android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
