--- a/app/src/main/res/layout/activity_second_login_page.xml
+++ b/app/src/main/res/layout/activity_second_login_page.xml
@@ -4,14 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#E3F2FD"
     tools:context=".secondLoginPage">
 
     <View
         android:id="@+id/view9"
         android:layout_width="0dp"
         android:layout_height="160dp"
-        android:background="#1E88E5"
+        android:background="#1A446B"
         android:rotationX="-180"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -22,7 +21,7 @@
         android:id="@+id/view10"
         android:layout_width="0dp"
         android:layout_height="140dp"
-        android:background="#1E88E5"
+        android:background="#1A446B"
         android:rotationX="-180"
         app:layout_constraintBottom_toBottomOf="@+id/view8"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -31,7 +30,7 @@
         android:id="@+id/view8"
         android:layout_width="295dp"
         android:layout_height="732dp"
-        android:background="#1E88E5"
+        android:background="#1A446B"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -45,7 +44,7 @@
         android:fontFamily="monospace"
         android:text="@string/text_admin"
         android:textAlignment="center"
-        android:textColor="#0099ff"
+        android:textColor="#1A446B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="#FFFFFF"
@@ -62,7 +61,7 @@
         android:fontFamily="monospace"
         android:text="@string/Doctor"
         android:textAlignment="center"
-        android:textColor="#0099ff"
+        android:textColor="#1A446B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="#FFFFFF"
@@ -78,7 +77,7 @@
         android:background="@drawable/spinnerbackground"
         android:fontFamily="monospace"
         android:text="@string/PATIENT"
-        android:textColor="#0099ff"
+        android:textColor="#1A446B"
         android:textSize="18sp"
         android:textStyle="bold"
         app:backgroundTint="#FFFFFF"
