--- a/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
+++ b/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
@@ -38,7 +38,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#000000"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -54,7 +54,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#000000"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -70,7 +70,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#000000"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -86,7 +86,7 @@
             android:paddingStart="4dp"
             android:paddingTop="12dp"
             android:textAlignment="textStart"
-            android:textColor="#000000"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             android:textStyle="normal"
             app:layout_constraintStart_toEndOf="@+id/imageView39"
@@ -121,10 +121,10 @@
 
         <TextView
             android:id="@+id/textView88"
-            android:layout_width="430dp"
-            android:layout_height="wrap_content"
+            android:layout_width="340dp"
+            android:layout_height="34dp"
             android:layout_marginTop="16dp"
-            android:background="@drawable/rounded_square_new"
+            android:background="#1A446B"
             android:elevation="5dp"
             android:text="@string/doctorassigned"
             android:textAlignment="center"
@@ -141,11 +141,11 @@
             android:layout_height="45dp"
             android:layout_marginStart="104dp"
             android:layout_marginTop="16dp"
+            android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
-            android:text="Not Yet Assigned"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="@+id/view42"
             app:layout_constraintTop_toBottomOf="@+id/textView88" />
@@ -156,11 +156,11 @@
             android:layout_height="45dp"
             android:layout_marginStart="104dp"
             android:layout_marginTop="4dp"
+            android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
-            android:text="@string/pending"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView89" />
@@ -171,11 +171,11 @@
             android:layout_height="45dp"
             android:layout_marginStart="104dp"
             android:layout_marginTop="4dp"
+            android:hint="@string/pending"
             android:paddingStart="4dp"
             android:paddingTop="12dp"
-            android:text="@string/pending"
             android:textAlignment="textStart"
-            android:textColor="#1A446B"
+            android:textColor="#BC000000"
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView90" />
