--- a/app/src/main/res/drawable-v24/incoming_speech_bubble.xml
+++ b/app/src/main/res/drawable-v24/incoming_speech_bubble.xml
@@ -93,13 +93,13 @@
             android:toDegrees="0">
             <shape android:shape="rectangle">
                 <corners android:radius="4dp"/>
-                <solid android:color="@color/teal_200" />
+                <solid android:color="#1A606B" />
             </shape>
         </rotate>
     </item>
     <item android:left="8dp">
         <shape android:shape="rectangle">
-            <solid android:color="@color/teal_200" />
+            <solid android:color="#1A606B" />
             <corners android:radius="8dp" />
         </shape>
     </item>
