--- a/app/src/main/res/layout/doctors_data_layout_view.xml
+++ b/app/src/main/res/layout/doctors_data_layout_view.xml
@@ -80,11 +80,11 @@
 
         <ImageView
             android:id="@+id/imageView28"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_marginEnd="16dp"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
             android:background="@drawable/grey_background"
-            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
