--- a/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
+++ b/app/src/main/res/layout/patient_appointments_recyclerview_layout.xml
@@ -136,7 +136,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewAppointmentTimeNew" />
 
         <TextView
-            android:id="@+id/textView89"
+            android:id="@+id/textViewDocName_APP"
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:layout_marginStart="104dp"
@@ -151,7 +151,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView88" />
 
         <TextView
-            android:id="@+id/textView90"
+            android:id="@+id/textViewDocPhone_APP"
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:layout_marginStart="104dp"
@@ -163,10 +163,10 @@
             android:textColor="#BC000000"
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView89" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDocName_APP" />
 
         <TextView
-            android:id="@+id/textView91"
+            android:id="@+id/textViewDocEmail_APP"
             android:layout_width="200dp"
             android:layout_height="45dp"
             android:layout_marginStart="104dp"
@@ -178,7 +178,7 @@
             android:textColor="#BC000000"
             android:textSize="17sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView90" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDocPhone_APP" />
 
         <View
             android:id="@+id/divider32"
@@ -187,7 +187,7 @@
             android:layout_marginStart="104dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView89" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDocName_APP" />
 
         <View
             android:id="@+id/divider33"
@@ -196,7 +196,7 @@
             android:layout_marginStart="104dp"
             android:background="?android:attr/listDivider"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView90" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDocPhone_APP" />
 
         <View
             android:id="@+id/divider34"
