--- a/app/src/main/res/layout-v23/recycle_viewer_item_received_message.xml
+++ b/app/src/main/res/layout-v23/recycle_viewer_item_received_message.xml
@@ -20,6 +20,7 @@
             android:padding="8dp"
             android:paddingStart="15dp"
             android:text="TextView"
+            android:elevation="4dp"
             android:textColor="#000000"
             android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
