--- a/app/src/main/res/layout/activity_second_login_page.xml
+++ b/app/src/main/res/layout/activity_second_login_page.xml
@@ -31,6 +31,7 @@
         android:layout_width="295dp"
         android:layout_height="732dp"
         android:background="#1A446B"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
